--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-   background-color: #e5e5e5;
+   background-color: #f2f2f2;
 }
 
 header{
@@ -11,6 +11,6 @@ header{
 h1{
    padding-left: 10px;
    padding-right: 10px;
-   background-color: #e5e5e5;
+   background-color: #f2f2f2;
    box-shadow: 1px 2px 5px #999;
 }
