--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ h1{
    padding-left: 10px;
    padding-right: 10px;
    background-color: #f2f2f2;
+   border-radius: 4px;
    box-shadow: 1px 2px 5px #999;
    color: #1a1a1a
 }
