--- a/css/style.css
+++ b/css/style.css
@@ -17,5 +17,5 @@ h1{
    background-color: #f2f2f2;
    border-radius: 4px;
    box-shadow: 1px 2px 5px #999;
-   color: #1a1a1a
+   color: #1a1a1a;
 }
