--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ h1{
    padding-left: 10px;
    padding-right: 10px;
    text-align: center;
+   padding-top: 5px;
    background-color: #f2f2f2;
    border-radius: 4px;
    box-shadow: 1px 2px 5px #999;
