--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ h1{
    padding-right: 10px;
    text-align: center;
    padding-top: 5px;
-   background-color: #f2f2f2;
+   background-color: #fafafa;
    border-radius: 4px;
    box-shadow: 1px 2px 5px #999;
    color: #1a1a1a;
