--- a/css/style.css
+++ b/css/style.css
@@ -24,8 +24,10 @@ h1{
 
 a:visited, a:link, a:active{
     text-decoration: none;
+    color: #1a1a1a;
 }
 
 a:hover{
    text-decoration: none;
+   color: blue;
 }
