--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ header{
    display: flex;
    padding-left: 20px;
    padding-top: 30px;
-}
+} 
 
 h1{
    width: 60px;
@@ -40,4 +40,8 @@ main > img {
 
 main{
    padding-left: 20px;
+}
+
+.homepage{
+   float: right;
 }
