--- a/css/style.css
+++ b/css/style.css
@@ -50,4 +50,8 @@ main{
    margin-top: 15px;
    width: 130px;
    height: 20px;
+   padding-top: 4px;
+   padding-left: 15px;
+   padding-bottom: 2px;
+   padding-right: 20px;
 }
