--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ main{
    padding-bottom: 2px;
    padding-right: 20px;
    background-color: #fafafa;
+   border-radius: 4px;
    box-shadow: 1px 2px 5px #999;
    color: #1a1a1a;
 }
